# miniFE-2.0_ref_Catalyst

./: .gitignore  README.md
adapter/: CMakeLists.txt  catalyst_adapter.cpp  catalyst_adapter.hpp
adapter/examples/: catalyst_adapter.cpp  example1_catalyst_adapter.cpp  example1_catalyst_adaptor.cpp  example2_catalyst_adapter.cpp  example2_catalyst_adaptor.cpp  example3_catalyst_adapter.cpp  example3_catalyst_adaptor.cpp  example4_catalyst_adapter.cpp  example4_catalyst_adaptor.cpp  example5_catalyst_adapter.cpp  example5_catalyst_adaptor.cpp  example6_catalyst_adapter.cpp  example6_catalyst_adaptor.cpp  initial_catalyst_adapter.cpp  live_catalyst_adapter.cpp
src/: Makefile  cg_solve.hpp  driver.hpp  gridwriter.py  main.cpp  make_targets
utils/: Parameters.hpp  utils.cpp
